--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django>=5.0
+Django>=4.2
 djangorestframework>=3.14
-gunicorn
-psycopg2-binary
-markdown
-datetime
-gunicorn
+gunicorn>=20.1.0
+psycopg2-binary>=2.9.0
+markdown>=3.4.0
+whitenoise>=6.0.0
+python-decouple>=3.6
